--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="começo">
         <h1 class="titulo"> Colégio Santo Antonio </h1> 
-        <img class="cabeçalho" src="santo.png" alt="Logo da Escola">
+        <img class="imagem-cabeçalho" src="santo.png" alt="Logo da Escola">
              <ul class="lista-um">
                 <li class="item-um"> Turmas </li>
                 <li class="item-um"> Informações de contato</li>
